update document, add css-color-preview

--- a/toolkit/SyntaxHighlighter/styles/shCore.css
+++ b/toolkit/SyntaxHighlighter/styles/shCore.css
@@ -51,10 +51,10 @@
 	height: auto !important;
 	width: auto !important;
 	line-height: 1.1em !important;
-	font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
+    font-family: "Bitstream Vera Sans Mono", "Consolas", "Courier New", Courier, monospace !important;
 	font-weight: normal !important;
 	font-style: normal !important;
-	font-size: 1em !important;
+	font-size: 0.98em !important;
 	min-height: inherit !important; /* For IE8, FF & WebKit */
 	min-height: auto !important; /* For IE7 */
 }
