--- a/toolkit/SyntaxHighlighter/styles/shThemeEX.css
+++ b/toolkit/SyntaxHighlighter/styles/shThemeEX.css
@@ -27,13 +27,13 @@
 /* Gutter line numbers */
 .syntaxhighlighter .line .number
 {
-	color: #5C5C5C !important;
+	color: #a14040 !important;
 }
 
 /* Add border to the lines */
 .syntaxhighlighter .line .content
 {
-	border-left: 1px solid #6CE26C !important;
+	border-left: 3px solid #808080 !important;
 	color: #000 !important;
 }
 
@@ -45,13 +45,13 @@
 /* First line */
 .syntaxhighlighter .line.alt1
 {
-	background-color: #E7E5DC !important;
+	background-color: #E0E0E0 !important;
 }
 
 /* Second line */
 .syntaxhighlighter .line.alt2
 {
-	background-color: #E7E5DC !important;
+	background-color: #E0E0E0 !important;
 }
 
 .syntaxhighlighter .toolbar
